--- a/index.html
+++ b/index.html
@@ -1,19 +1,28 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8">
-    <title>Hello World!</title>
-  </head>
-  <body>
-    <h1>Hello World!</h1>
-    <!-- All of the Node.js APIs are available in this renderer process. -->
-    We are using Node.js <script>document.write(process.versions.node)</script>,
-    Chromium <script>document.write(process.versions.chrome)</script>,
-    and Electron <script>document.write(process.versions.electron)</script>.
+    <link rel="stylesheet" href="css/main.css"></link>
+    <link href="https://fonts.googleapis.com/css?family=Lato:400" rel="stylesheet">
 
     <script>
-      // You can also require other files to run in this process
-      require('./renderer.js')
+      require('./js/renderer.js');
+      window.$ = window.jQuery = require('jquery');
     </script>
+
+    <meta charset="UTF-8">
+    <title>Simple Alarm</title>
+  </head>
+
+  <body>
+    <div id="title" class="info">Hi!</div>
+    <div class="info">Pick time and press enter...</div>
+    <input id="picker" type="time"/>
   </body>
 </html>
+
+<script>
+$(document).ready(function()
+{
+    // alert(100);
+});
+</script>
